feat: add grade endpoints
