# swagger_server/swagger/swagger.yaml
@@ -12,6 +12,70 @@ servers:
 - url: https://virtserver.swaggerhub.com/tutorial/1.0.0
   description: SwaggerHub API Auto Mocking
 paths:
+  /student/{student_id}/average_grade:
+    get:
+      summary: Gets average grade of student
+      description: Returns the average grade of a given student.
+      operationId: get_student_average
+      parameters:
+        - name: student_id
+          in: path
+          description: the uid
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: number
+                format: float
+        "400":
+          description: Invalid ID
+        "404":
+          description: Not found
+      x-openapi-router-controller: swagger_server.controllers.default_controller
+  /student/{student_id}/grades/{subject}:
+    get:
+      summary: Gets grade of student for subject
+      description: Returns the grade of a given student and subject.
+      operationId: get_student_grade
+      parameters:
+        - name: student_id
+          in: path
+          description: the uid
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+            format: uuid
+        - name: subject
+          in: path
+          description: the subject name
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: number
+                format: float
+        "400":
+          description: Invalid ID
+        "404":
+          description: Not found
+      x-openapi-router-controller: swagger_server.controllers.default_controller
   /student/{student_id}:
     get:
       summary: gets student
